# Coursera-DeepLearning.AI-Natural-Language-Processing-Specialization

./: pyproject.toml
Course-1-Natural Language Processing with Classification and Vector Spaces/Course-1-Week-1/Course-1-Week-1-Optional-Labs/: Course-1-Week-1-Optional-Labs-1-Preprocessing.ipynb  Course-1-Week-1-Optional-Labs-2-Building-and-Visualizing-word-frequencies.ipynb
Course-1-Natural Language Processing with Classification and Vector Spaces/Course-1-Week-1/Course-1-Week-1-Practice-Labs/: Course-1-Week-1-Practice-Labs-1-Logistic-Regression.ipynb
